--- a/website_1/mainapp/templates/mainapp/index.html
+++ b/website_1/mainapp/templates/mainapp/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Главная страница</title>
-</head>
-<body>
-<h1>Hello world!</h1>
-</body>
-</html>
+{% extends 'mainapp/base.html' %}
+{% load static %}
+{% block content %}
+    <div>Jenny6199</div>
+{% endblock content %}
