prepeare startpage and style.css

--- a/website_1/mainapp/templates/mainapp/index.html
+++ b/website_1/mainapp/templates/mainapp/index.html
@@ -1,5 +1,5 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
-    <div>Jenny6199</div>
+    <div class="container visual">Контент</div>
 {% endblock content %}
