--- a/website_1/mainapp/templates/mainapp/base.html
+++ b/website_1/mainapp/templates/mainapp/base.html
@@ -9,23 +9,43 @@
 					{{ title|title }}
 				{% endblock title %}
 			</title>
+
 			{% block css %}
-				<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-				<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<!--					<link
+							href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+							rel="stylesheet"
+							integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+							crossorigin="anonymous"
+					>
+-->
+					<link
+							rel="stylesheet"
+							type="text/css"
+							href="{% static 'css/style.css' %}"
+					>
 			{% endblock css %}
 
 			{% block js %}
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 			{% endblock js %}
 	</head>
     <body>
-			<div>
-                {% block content %}
-                {% endblock content %}
+		<div class="container">
+			<div class="wrapper">
+				<header>
+					{% block header %}
+						{% include 'includes/inc_header.html' %}
+					{% endblock header%}
+				</header>
+				<div>
+					{% block content %}
+					{% endblock content %}
+				</div>
 			</div>
-			<div>
+			<footer>
 				{% block footer %}
-        		{% endblock footer %}
-			</div>
+					{% include 'includes/inc_footer.html' %}
+				{% endblock footer %}
+			</footer>
+		</div>
     </body>
 </html>
