two columns markdown

--- a/website_1/mainapp/templates/includes/inc_header.html
+++ b/website_1/mainapp/templates/includes/inc_header.html
@@ -1,4 +1,6 @@
 {% load static %}
-<div class="container visual box">
-  Шапка сайта
+<div class="container center">
+    <div class="header_text">
+        проект "Меркурий"
+    </div>
 </div>
