--- a/website_1/mainapp/templates/mainapp/index.html
+++ b/website_1/mainapp/templates/mainapp/index.html
@@ -1,5 +1,12 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
-    <div class="container visual">Контент</div>
+    <div class="context flex">
+        <div class="left_column box full-height">
+            Левая колонка
+        </div>
+        <div class="right_column box full-height">
+            Правая колонка
+        </div>
+    </div>
 {% endblock content %}
