--- a/website_1/mainapp/templates/mainapp/index.html
+++ b/website_1/mainapp/templates/mainapp/index.html
@@ -1,6 +1,9 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
+    <div class="box">
+        {% include 'includes/inc_menu.html' %}
+    </div>
     <div class="context flex">
         <div class="left_column box full-height">
             Левая колонка
