--- a/website_1/mainapp/templates/mainapp/index.html
+++ b/website_1/mainapp/templates/mainapp/index.html
@@ -1,15 +1,66 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
-    <div class="box">
+    <div class="">
         {% include 'includes/inc_menu.html' %}
     </div>
     <div class="context flex">
         <div class="left_column box full-height">
-            Левая колонка
+            <div class="column_text">
+                <ul class="column_list">
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                    <li><a href="#">ссылка</a></li>
+                </ul>
+            </div>
         </div>
         <div class="right_column box full-height">
-            Правая колонка
+            <div class="column_text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid dolores eveniet facilis id ipsa
+                laudantium natus quia veritatis vitae! A adipisci, aliquam assumenda cum dignissimos dolores dolorum
+                eum ex exercitationem expedita explicabo harum hic illum in iusto maiores, minima molestiae nobis porro
+                provident qui quidem ratione similique sint sit sunt vel! At atque, aut eius esse et, ex explicabo
+                facere iure iusto, laborum molestias nobis numquam quam quia quod reprehenderit soluta sunt ullam
+                voluptate voluptatem! Consectetur cupiditate dolorem harum inventore molestiae. Animi aut consectetur
+                deleniti dolore doloremque et eum expedita illum magnam, minima officia provident similique velit!
+                Facere incidunt laborum molestiae non numquam officiis, quo vero. Adipisci culpa, eos error eum
+                excepturi fugit impedit, laboriosam nam nesciunt officia omnis quas voluptates. Aut dicta dolore labore
+                sit sunt suscipit ullam? Ad asperiores doloremque dolorum esse exercitationem nihil praesentium quaerat.
+                Adipisci aliquid aperiam consectetur cum eaque eius fugit, mollitia odit omnis quos, rem voluptas
+                voluptatibus? A aut consequuntur enim harum impedit modi odio quia reiciendis repellat. Ab atque
+                deleniti harum numquam sed. Atque cum distinctio dolore exercitationem fugit laborum minus, officiis
+                optio porro quasi. Accusamus aliquid dolorum ipsum iste labore laborum nostrum odio officia quia
+                repellat, rerum unde vitae voluptas! Aliquam animi commodi consequuntur delectus dignissimos dolores,
+                doloribus, eligendi facere ipsa natus non obcaecati quod quos ratione recusandae repudiandae sequi totam
+                velit. Asperiores, blanditiis cum excepturi facere fugit illo iusto magnam nulla placeat possimus
+                ratione sit, unde voluptatem? Accusamus dolore ducimus ea, enim eum, facilis, id itaque modi nam odio
+                optio pariatur quos tenetur unde voluptatibus. A aliquid assumenda corporis deserunt dolor earum, eum
+                excepturi fugiat iure libero magni minima, natus nemo nobis officiis optio praesentium qui quia, quis
+                reiciendis sapiente sed ut voluptas. Accusamus alias architecto aspernatur aut corporis debitis
+                distinctio earum esse in inventore ipsam, laborum libero magnam maxime molestias odio officia omnis
+                optio perferendis provident qui quo reiciendis rem sapiente, ullam ut, vero voluptates? A, amet beatae
+                dolores eaque eius fuga fugiat illo impedit ipsum iste magnam nostrum numquam obcaecati officia quasi
+                reprehenderit similique. Deleniti error molestiae voluptate. Ab accusamus accusantium beatae cumque
+                delectus, deleniti deserunt dicta doloremque ducimus enim eos esse est et ex exercitationem facilis fuga
+                fugiat harum impedit iste libero minus molestias nemo neque nesciunt nostrum numquam odit placeat,
+                quidem ratione rerum, saepe sapiente sed similique totam voluptate voluptatem! Aliquam facilis fugiat
+                neque rem ullam? A, autem delectus iusto molestias mollitia natus nihil nisi omnis porro praesentium
+                quas quia repudiandae sunt tempore tenetur! Accusantium amet cupiditate debitis deleniti dicta,
+                dignissimos doloribus earum esse, expedita facere facilis illum impedit ipsum iusto maxime natus non
+                numquam odit omnis, quam quas qui recusandae similique tempore ullam voluptate voluptatem voluptatibus!
+                Ad, aliquid assumenda aut earum error exercitationem explicabo iure molestiae mollitia neque omnis quo
+                ratione suscipit totam ullam velit voluptates. Eum explicabo iste perspiciatis praesentium quia
+                recusandae reiciendis! Ab accusantium alias assumenda beatae blanditiis, consectetur consequuntur
+                cupiditate delectus deleniti dignissimos dolore doloremque ducimus excepturi fuga hic incidunt natus
+                nisi non odit pariatur placeat possimus rem reprehenderit repudiandae sapiente suscipit
+            </div>
         </div>
     </div>
 {% endblock content %}
