--- a/website_1/static/css/style.css
+++ b/website_1/static/css/style.css
@@ -1,5 +1,8 @@
 body {
-    background-color: cornsilk;
+    background-image: url(/static/img/background_1.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
 }
 
 .container {
@@ -19,7 +22,7 @@ body {
 
 .wrapper {
     min-height: 89vh;
-    background-color: aquamarine;
+    background-color: none;
 }
 
 footer {
@@ -29,7 +32,7 @@ footer {
 }
 
 header {
-    background-color: honeydew;
+    background-color: none;
     border: 1px dotted black;
     font-size: 64px;
 }
@@ -52,24 +55,38 @@ header {
 }
 
 .left_column {
-    width: 20%;
-    margin: 1vh 1vh 1vh 0vh;
-    background-image: none;
-
+    width: fit-content;
+    margin: 0vh 1vh 1vh 0vh;
+    background-color: mintcream;
+    opacity: 0.7;
 }
 
 .right_column {
-    width: 80%;
-    margin: 1vh 0vh 1vh 0vh;
-    background-image: none;
+    width: 111em;
+    margin: 0vh 0vh 1vh 0vh;
+    background-color: mintcream;
+    opacity: 0.7;
 }
 
 .full-height {
-    height: 75vh;
+    min-height: fit-content;
+}
+
+.column_text {
+    padding: 25px;
+    font-size: 20px;
+    font-family: math;
+    text-align: justify;
+}
+
+.column_list {
+    list-style: none;
+    padding-inline-start: 0px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
 
 context {
-    display: flex;
     flex-direction: row;
     min-height: 55vh;
     margin: 1vh auto;
@@ -83,19 +100,27 @@ context {
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed');
 .menu-main {
-  list-style: none;
-  margin: 20px 0px;
-  text-align: center;
-  background: initial;
+    list-style: none;
+    margin: 20px 0px;
+    text-align: center;
+    background: initial;
 }
-.menu-main li {display: inline-block;}
+
+.menu-main li {
+    display: inline-block;
+}
+
 .menu-main li:after {
   content: "|";
   color: black;
   display: inline-block;
   vertical-align:top;
 }
-.menu-main li:last-child:after {content: none;}
+
+.menu-main li:last-child:after {
+    content: none;
+}
+
 .menu-main a {
   text-decoration: none;
   font-family: 'Ubuntu Condensed', sans-serif;
@@ -107,9 +132,13 @@ context {
   display: inline-block;
   transition: color .2s;
 }
+
 .menu-main a, .menu-main a:visited {color: black;}
+
 .menu-main a.current, .menu-main a:hover{color: navy;}
+
 .menu-main a:before,
+
 .menu-main a:after {
   content: "";
   position: absolute;
@@ -121,14 +150,17 @@ context {
   background: navy;
   transition: .8s;
 }
+
 .menu-main a:hover:before, .menu-main .current:before {left: 0;}
+
 .menu-main a:hover:after, .menu-main .current:after {right: 0;}
+
 @media (max-width: 550px) {
-.menu-main {padding-top: 0;}
-.menu-main li {display: block;}
-.menu-main li:after {content: none;}
-.menu-main a {
-  padding: 25px 0 20px;
-  margin: 0 30px;
-}
+    .menu-main {padding-top: 0;}
+    .menu-main li {display: block;}
+    .menu-main li:after {content: none;}
+    .menu-main a {
+        padding: 25px 0 20px;
+        margin: 0 30px;
+    }
 }
