add button box on title page

--- a/website_1/mainapp/templates/includes/inc_header.html
+++ b/website_1/mainapp/templates/includes/inc_header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container center">
     <div class="header_text">
-        проект "Меркурий"
+        заголовок проекта
     </div>
 </div>
