--- a/website_1/mainapp/templates/mainapp/base.html
+++ b/website_1/mainapp/templates/mainapp/base.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 {% load static %}
 	<head>
 
 			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<title>
 				{% block title %}
 					{{ title|title }}
 				{% endblock title %}
 			</title>
-
 			{% block css %}
-<!--					<link
-							href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+		    		<!-- Add bootstrap styles -->
+					<link
+							href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
 							rel="stylesheet"
-							integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+							integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
 							crossorigin="anonymous"
 					>
--->
+					<!-- Add self-styles -->
 					<link
 							rel="stylesheet"
 							type="text/css"
@@ -29,6 +30,10 @@
 			{% endblock js %}
 	</head>
     <body>
+		{% block bootstrap_scripts %}
+			{% include 'includes/inc_bootstrap_scripts.html' %}
+		{% endblock bootstrap_scripts %}
+
 		<div class="container">
 			<div class="wrapper">
 				<header>
