add card block and id to some divs

--- a/website_1/mainapp/templates/includes/inc_footer.html
+++ b/website_1/mainapp/templates/includes/inc_footer.html
@@ -2,3 +2,6 @@
 		<div class="visual container">
 			Подвал сайта
 		</div>
+		<div class="">
+			<a href="#up" class="btn btn-primary">вверх</a>
+		</div>
