--- a/website_1/mainapp/templates/includes/inc_header.html
+++ b/website_1/mainapp/templates/includes/inc_header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="container center">
-    <div class="header_text">
+    <div class="header_text" id="up">
         заголовок проекта
     </div>
 </div>
